Fix social bar on mobile

--- a/bootstrap/less/custom.less
+++ b/bootstrap/less/custom.less
@@ -211,7 +211,7 @@ nav.navbar-default {
     position: absolute;
     line-height: 68px;
     height: 70px;
-    margin-left: 130px;
+    margin-left: 124px;
 
     transition-property: opacity;
     transition-duration: 0.5s;
@@ -224,7 +224,7 @@ nav.navbar-default {
 
     a {
         display: inline-block;
-        margin-right: 6px;
+        padding-right: 4px;
 
         img {
             width: auto;
